# ipgm

./: .gitignore  README  README.md
cmake/: FindWindowsSDK.cmake
docs/ipmg/uml/: ipgm.asta  ipgm.asta.bak
docs/itspic/: stack.txt
docs/itspic/Discrete Events Models/: .~lock.Specifications.odt#
docs/itspic/Discrete Events Models/IDES/: BOX_BLOCKER.xmd  BOX_FITTER.xmd  ELEVATOR.xmd  Events.xmd  INPUT_BOX.xmd  INPUT_PALLET.xmd  P_BOX_FITTER.xmd  Plant.xmd  RETRACTABLE_FLOOR.xmd  Specifications.odt  Specs.xmd  workspace.xws
docs/uml/: ipgm.asta  ipgm.asta.bak
notebook/: ipgm.ipynb
samples/itspic/Discrete Events Models/: Specifications.odt
samples/itspic/Discrete Events Models/IDES/: E_ELEVATOR.xmd  E_FITTER_FLOOR.xmd  E_IPALLET_ELEVATOR.xmd  P_BOX_BLOCKER.xmd  P_INPUT_BOX.xmd  Supcon.fm  workspace.xws
samples/itspic/Discrete Events Models/Modular_Local/: .~lock.Specifications.odt#  EN_ELEVATOR_FITTER.xmd  EN_FITTER_FLOOR.xmd  EN_IBOX_FLOOR.xmd  EN_IPALLET_ELEVATOR.xmd  E_ELEVATOR_FITTER.xmd  E_ELEVATOR_FLOOR.xmd  E_IBOX_FLOOR.xmd  E_IBOX_FLOOR2.xmd  K.xmd  K_ELEVATOR_FITTER.xmd  K_ELEVATOR_FLOOR.xmd  K_FITTER_FLOOR.xmd  K_IBOX_FLOOR.xmd  K_IPALLET_ELEVATOR.xmd  MonoSupCon.fm  MonoSupCon.xmd  P_INPUT_BOX.xmd  P_INPUT_PALLET.xmd  P_RETRACTABLE_FLOOR.xmd  PlantTotal.xmd  SUP_ELEVATOR_FITTER.fm  SUP_ELEVATOR_FITTER.xmd  SUP_ELEVATOR_FLOOR.xmd  SUP_FITTER_FLOOR.fm  SUP_FITTER_FLOOR.xmd  SUP_IBOX_FLOOR.fm  SUP_IBOX_FLOOR.xmd  SUP_IPALLET_ELEVATOR.xmd  S_ELEVATOR_FITTER.xmd  S_ELEVATOR_FLOOR.xmd  S_FITTER_FLOOR.xmd  S_IBOX_FLOOR.xmd  S_IPALLET_ELEVATOR.xmd  Specifications.odt  SpecsTotal.xmd  TesteModularidade.xmd  supcon(S_ELEVATOR_FITTER).xmd  supcon(S_FITTER_FLOOR).xmd  supcon(S_IBOX_FLOOR).xmd  (+3 more)
samples/itspic/Discrete Events Models/Monolithic/: E_BLOCKER_FLOOR_TIMING.xmd  E_BLOCK_FLOOR.xmd  E_ELEVATOR_FITTER.xmd  E_IBOX_BLOCKER.xmd  P_ELEVATOR.xmd  Supcon.xmd
samples/itspic/itspic/: CMakeLists.txt  main.cpp
samples/itspic/paper/sbc/: cased_itspic.aux  cased_itspic.blg  cased_itspic.dvi  cased_itspic.out  cased_itspic.tex
samples/itspic/pic_control/: README  compile.bat  compile_extra.txt  gpsim_socket.py  itspic_control.c  ls_18f6520.lkr  pl_control.c  runsim.bat  sim_control.stc
samples/itspic/pic_control/grail_itspic_compiler/: SUP_FITTER_FLOOR.fm  SUP_IBOX_FLOOR.fm  SUP_IPALLET_ELEVATOR.fm  _defines.c  _global_variables.c  _header.c  _interrupt.c  _main.c  _sequence_operations.c  _setup.c  grail_itspic_compiler.ipynb  main.c
samples/itspic/pic_control/mplab_project/: atraso.c  atraso.h  datatypes.h  itoa.c  itoa.h  lcd.c  lcd.h  main.c  mylcd.h  serial.c  serial.h
samples/itspic/presentation/: CD01 - Architecture.png.bak  Diagram1.dia  Diagram2.dia  P_BOX_FITTER.dia  P_BOX_FITTER.dia~  P_ELEVATOR.dia  P_ELEVATOR.dia~  P_INPUT_BOX.dia  P_INPUT_BOX.dia~  P_INPUT_PALLET.dia  P_INPUT_PALLET.dia~  P_RETRACTABLE_FLOOR.dia  P_RETRACTABLE_FLOOR.dia~  pic_control.dia  pic_control.dia~  pic_main_flow.dia  pic_main_flow.dia~
sourcetree/: CMakeLists.txt  main.cpp
sourcetree/ipgm/: CMakeLists.txt  IPGM.cpp  IPSystem.cpp  KeyboardSystem.cpp  Log.cpp  MouseSystem.cpp  WindowManager.cpp  main.cpp
sourcetree/ipgm/include/: IPGM.hpp  IPGMCallbacks.hpp  IPSystem.hpp  KeyboardSystem.hpp  Log.hpp  MouseSystem.hpp  WindowManager.hpp
